deploy/stage/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stage-mpg-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - stage.mpgcompare.com
      secretName: stage-mpg-tls
  rules:
    - host: stage.mpgcompare.com
      http:
        paths:
          - backend:
              serviceName: stage-mpg
              servicePort: 80
